# text2img-bot

./: README.md  pyproject.toml
.github/workflows/: python-ci.yml
text2img_bot/: hooks.py
